# demo05

./: .gitattributes  .gitignore  .lefthook.yaml  .mcp.json  .prettierignore  .prettierrc  .secretlintignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  commitlint.config.ts  commitlint.pr.config.ts  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: README.md  settings.json  statusline.sh
.claude/agents/: audit.md  explore.md
.claude/hooks/: lib.sh  post-compact-reinject.sh  post-tool-use-check.sh  pre-tool-use-bash.sh  protect-paths.sh  stop-gate.sh
.github/: labeler.yml  pull_request_template.md
.github/workflows/: assign.yml  ci.yml  labeler.yml  lint-pr.yml  lint-workflows.yml
acceptance/: package.json  playwright.config.ts
docs/: OpenAPI自動生成ガイド.md  playbook.md  必要画面・機能一覧.md  環境構築.md
reference-mock/: PROVENANCE.md  phase1-plan.md  phase2-design.md  report-quality-design.md  spec.md
scripts/: install-lefthook.sh  pre-commit-check.sh
tools/teamdev-test-runner-mcp/: README.md  pyproject.toml
tools/teamdev-test-runner-mcp/examples/: backend.test-harness.runtime.json  frontend.test-harness.runtime.json  service.test-harness.runtime.json  web.test-harness.runtime.json
tools/teamdev-test-runner-mcp/schema/: runtime.schema.json
tools/teamdev-test-runner-mcp/src/teamdev_test_runner/: __init__.py  __main__.py  log_buffer.py  process_manager.py  ready_check.py  runtime_config.py  server.py
tools/teamdev-test-runner-mcp/tests/: test_process_manager.py  test_ready_check.py  test_runtime_config.py
(+454 files in other folders)
