[project]
name = "teamdev-test-runner"
version = "0.2.0"
description = "アプリ起動・監視の MCP（runner）。採点はテストFWが行う。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.scripts]
teamdev-test-runner = "teamdev_test_runner.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teamdev_test_runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
